Handle vaccination API failures without silent empty results